k8s/base/git-sync-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app.kubernetes.io/name: git-sync
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: git-sync
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
