k8s/base/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-preview
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: app
